update: add preloader

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 </head>
 <body>
 
-  <div class="advice-card">
+  <div class="advice-card" data-preloader="off">
     <div class="advice-card-wrapper">
-      <h5 class="advice-header">Advice #<span class="advice-id"></span></h5>
+      <h5 class="advice-header"></h5>
       <p class="advice-body"></p>
       <img src="./images/pattern-divider-desktop.svg" alt="Pattern Divider for Desktop" class="advice-divider advice-desktop-divider">
       <img src="./images/pattern-divider-mobile.svg" alt="Pattern Divider for Mobile" class="advice-divider advice-mobile-divider">
-
     </div>
+
     <button class="dice-button" rolled-condition="off">
       <img src="./images/icon-dice.svg" alt="Dice Icon">
     </button>
